--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,10 +15,10 @@
             <h1>Top Mascots</h1>
             <p><%= tagline %></p>
             <ul>
-                <% mascots.forEach(function(mascots) { %>
+                <% mascots.forEach(function(mascot) { %>
                     <li>
-                        <strong><%= mascots.name %></strong>
-                        difficulty <%= mascots.difficulty %>
+                        <strong><%= mascot.name %></strong>
+                        difficulty <%= mascot.difficulty %>
                     </li>
                 <% }); %>
             </ul>
@@ -32,13 +32,13 @@
         <h2 class="text-center mb-4">Our Escape Rooms</h2>
         <div class="row">
           <div class="col-md-4">
-            <img src="images/room1.jpg" class="img-fluid rounded shadow-sm" alt="Room 1">
+            <img src="https://cdn.discordapp.com/attachments/1148659945177354270/1358562200335155421/room1.jpg?ex=67f44b25&is=67f2f9a5&hm=df39dd37279cd6eaefb4e25b1f95ad7c9b6f8aaa0ede6c5cc849db276f21eaf5&" class="img-fluid rounded shadow-sm" alt="Room 1">
           </div>
           <div class="col-md-4">
-            <img src="images/room2.jpg" class="img-fluid rounded shadow-sm" alt="Room 2">
+            <img src="https://cdn.discordapp.com/attachments/1148659945177354270/1358562200784076972/room2.jpg?ex=67f44b25&is=67f2f9a5&hm=c63dcfc76fdeff395feffbe6d4a3c7377a08f5b7606a3ef7ff48689547296d9e&" class="img-fluid rounded shadow-sm" alt="Room 2">
           </div>
           <div class="col-md-4">
-            <img src="images/room3.jpg" class="img-fluid rounded shadow-sm" alt="Room 3">
+            <img src="https://cdn.discordapp.com/attachments/1148659945177354270/1358562201257906316/room3.jpg?ex=67f44b25&is=67f2f9a5&hm=6ad7e04abc0ff87f33bcc4f463fcbbec23b6c0f3a283324faadab7c0d5406bea&" class="img-fluid rounded shadow-sm" alt="Room 4">
           </div>
         </div>
       </div>
