--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,8 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-
+<link rel="stylesheet" href="/style.css">
 <style>
-    body { padding-top:50px; }
+    body { padding-top:50px; };
+  
 </style>
