--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<p class="text-center text-muted">©Regular Company Co.</p>
+<p class="text-center text-white text-muted">©Regular Company Co.</p>
 <footer class="bg-light py-4 mt-5">
-    <div class="container text-center">
+    <div class="container text-center text-dark">
       <p class="mb-3">Contact us through social media:</p>
       <div class="d-flex justify-content-center gap-4 fs-1">
         <a href="#" class="text-dark"><i class="bi bi-twitter"></i></a>
