--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark text-white">
   <a class="navbar-brand" href="/">Regular Escape Room Co.</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
